force-app/main/default/objects/Mercury_Settings__mdt/Mercury_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Mercury Settings</label>
    <pluralLabel>Mercury Settings</pluralLabel>
    <description>Configuration settings for Mercury invoicing integration</description>
</CustomObject>