force-app/main/default/objects/Mercury_Settings__mdt/fields/Auto_Close_On_Payment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_On_Payment__c</fullName>
    <label>Auto Close On Payment</label>
    <description>Automatically set Opportunity to Closed Won when invoice is paid</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>