force-app/main/default/objects/Mercury_Settings__mdt/fields/Enable_ACH__c.field-meta.xml
<CustomField>
    <fullName>Enable_ACH__c</fullName>
    <label>Enable ACH</label>
    <description>Allow customers to pay invoices via ACH bank transfer</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>