force-app/main/default/objects/Mercury_Settings__mdt/fields/Enable_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Enable_Credit_Card__c</fullName>
    <label>Enable Credit Card</label>
    <description>Allow customers to pay invoices via credit card</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>