force-app/main/default/objects/Mercury_Settings__mdt/fields/Enable_Wire__c.field-meta.xml
<CustomField>
    <fullName>Enable_Wire__c</fullName>
    <label>Enable Wire</label>
    <description>Allow customers to pay invoices via wire transfer</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>