force-app/main/default/objects/Mercury_Settings__mdt/fields/Invoice_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Days__c</fullName>
    <label>Invoice Due Days</label>
    <description>Number of days from invoice creation until due date (default: 30)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
</CustomField>