force-app/main/default/objects/Mercury_Settings__mdt/fields/Invoice_Trigger_Stage__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Trigger_Stage__c</fullName>
    <label>Invoice Trigger Stage</label>
    <description>Opportunity stage that triggers invoice creation (default: Invoice)</description>
    <type>Text</type>
    <length>100</length>
</CustomField>