force-app/main/default/objects/Mercury_Settings__mdt/fields/Polling_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Polling_Frequency_Minutes__c</fullName>
    <label>Polling Frequency (Minutes)</label>
    <description>How often to check invoice status (15, 30, or 60 minutes)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>60</defaultValue>
</CustomField>