force-app/main/default/objects/Mercury_Settings__mdt/fields/Send_Email_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_On_Create__c</fullName>
    <label>Send Email On Create</label>
    <description>Automatically send invoice email to customer when created</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>